--- a/candidate_fire_extraction.ipynb
+++ b/candidate_fire_extraction.ipynb
@@ -177,7 +177,7 @@
    },
    "outputs": [],
    "source": [
-    "s3_fsspec = fsspec.filesystem(\"s3\", profile=\"maap-data-reader\") #for direct reader access to LPDAAC\n",
+    "s3_fsspec = fsspec.filesystem(\"s3\", profile=\"maap-data-reader\") #for direct reader access to LPDAAC - ask Alex\n",
     "\n",
     "pix_lut = pd.read_csv('/projects/shared-buckets/coffield/pix_size_lut.csv', index_col='sample') #view zenith angle lookup table"
    ]
